RESOLVED FIXED188725
REGRESSION (r234396): Leak of CFURLRef in WebKit::NetworkProcess::deleteHSTSCacheForHostNames()
https://bugs.webkit.org/show_bug.cgi?id=188725
Summary REGRESSION (r234396): Leak of CFURLRef in WebKit::NetworkProcess::deleteHSTSC...
David Kilzer (:ddkilzer)
Reported 2018-08-18 16:48:03 PDT
Leak of CFURLRef in WebKit::NetworkProcess::deleteHSTSCacheForHostNames(): void NetworkProcess::deleteHSTSCacheForHostNames(WebCore::NetworkStorageSession& session, const Vector<String>& hostNames) { for (auto& hostName : hostNames) _CFNetworkResetHSTS(CFURLCreateWithString(kCFAllocatorDefault, hostName.createCFString().get(), NULL), session.platformSession()); } Found by internal static analyzer bot.
Attachments
Patch v1 (2.00 KB, patch)
2018-08-18 16:50 PDT, David Kilzer (:ddkilzer)
no flags
Radar WebKit Bug Importer
Comment 1 2018-08-18 16:48:18 PDT
David Kilzer (:ddkilzer)
Comment 2 2018-08-18 16:50:46 PDT
Created attachment 347453 [details] Patch v1
WebKit Commit Bot
Comment 3 2018-08-19 08:16:56 PDT
Comment on attachment 347453 [details] Patch v1 Clearing flags on attachment: 347453 Committed r235016: <https://trac.webkit.org/changeset/235016>
WebKit Commit Bot
Comment 4 2018-08-19 08:16:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.