REGRESSION (r234396): Leak of CFURLRef in WebKit::NetworkProcess::deleteHSTSCacheForHostNames() <https://webkit.org/b/188725>

Reviewed by Dan Bernstein.

* NetworkProcess/cocoa/NetworkProcessCocoa.mm:
(WebKit::NetworkProcess::deleteHSTSCacheForHostNames): Use
adoptCF() to prevent a leak.


Canonical link: https://commits.webkit.org/203790@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235016 268f45cc-cd09-0410-ab3c-d52691b4dbfc